[package]
name = "math_lib_test"
version = "0.1.1"
edition = "2021"
authors = ["Mahmudul Islam <mahmudulislam299@gmail.com>"]
license = "MIT"
repository = "https://github.com/mahmudulislam299/rust_math_lib_test"
description = "This is a test Library for rust" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-str = "0.1"
